fix link overflow

--- a/twitter/src/app/app.component.css
+++ b/twitter/src/app/app.component.css
@@ -126,12 +126,3 @@ textarea {
   position: relative;
   top: 3px;
 }
-
-.post-link {
-  color: blue;
-  text-decoration: underline;
-}
-
-.post-link:hover {
-  cursor: pointer;
-}
